# hydrosurvey

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/hydrosurvey/: __init__.py  cli.py  gui.py  interpolate.py  main.py  sn.py  widgets.py  write_xyz.py
src/hydrosurvey/widgets/: __init__.py  file_picker.py  interpolate_lake.py  write_xyz.py
tests/: test_cli.py  test_interpolate.py  test_normalized_intensities.py  test_read.py  test_read_metadata.py  test_read_picks.py
tests/data/lakes/texana_v2/: texana_boundary_v2.dbf  texana_boundary_v2.shp  texana_boundary_v2.shx  texana_interp_lines_v2.dbf  texana_interp_lines_v2.shp  texana_interp_lines_v2.shx  texana_interp_polygons_v2.dbf  texana_interp_polygons_v2.shp  texana_interp_polygons_v2.shx
