[project]
authors = [{name = "Dharhas Pothina", email = "dharhas@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "hydrosurvey"
requires-python = ">= 3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
hydrosurvey = { path = ".", editable = true }

[project.scripts]
hstools = "hydrosurvey.cli:app"

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">3.11,<3.13"
geopandas = "*"
hvplot = ">=0.11.1"
panel = ">=1.5.4"
geoviews = ">=1.13"
numpy = "*"
jupyterlab = "*"
tqdm = "*"
scipy = "*"
shapely = "*"
bokeh = ">=3.5"
typer = ">=0.13.1,<0.14"
questionary = ">=2.0.1,<3"
tomli-w = ">=1.1.0,<2"
rioxarray = ">=0.17.0,<0.18"
matplotlib = ">=3.9.3,<4"
